Fix layout bugs. / Add text.

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -33,7 +33,7 @@
         background-position: 0 100%;
     }
     @media only screen and (max-aspect-ratio: 5 / 8) {
-        background-size: 137%;
+        background-size: 145%;
         background-position: 0 100%;
     }
     @media only screen and (max-aspect-ratio: 4 / 7) {
@@ -122,6 +122,7 @@
 .language-change {
     font-size: 2.5rem;
     text-decoration: none;
+    margin-right: -2rem;
     color: $color-primary-1;
 }
 
